add gitlab, ingress-nginx

--- a/atlantis/values-atlantis.yaml
+++ b/atlantis/values-atlantis.yaml
@@ -1,5 +1,9 @@
-orgAllowlist: <git>
+orgAllowlist: <repo>
 github:
   user: <user>
   token: <token>
   secret: <secret>
+service:
+  type: ClusterIP
+loadEnvFromSecrets:
+  - yc-secret
