--- a/csi/secret.yaml
+++ b/csi/secret.yaml
@@ -5,5 +5,5 @@ metadata:
   name: csi-rbd-secret
   namespace: ceph-csi-rbd
 stringData:
-  userID: rbdkube
-  userKey: <user-key>
+  userID: <user>
+  userKey: <token>
