--- a/csi/cephrbd.yml
+++ b/csi/cephrbd.yml
@@ -1,9 +1,7 @@
 csiConfig:
-  - clusterID: <Cluster ID>
+  - clusterID: <cluster id>
     monitors:
-      - "v2:172.18.8.5:3300/0,v1:172.18.8.5:6789/0"
-      - "v2:172.18.8.6:3300/0,v1:172.18.8.6:6789/0"
-      - "v2:172.18.8.7:3300/0,v1:172.18.8.7:6789/0"
+      - "v2:192.168.2.200:3300/0,v1:192.168.2.200:6789/0"
 
 nodeplugin:
   podSecurityPolicy:
