--- a/csi/storageclass.yaml
+++ b/csi/storageclass.yaml
@@ -1,10 +1,11 @@
+---
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
    name: csi-rbd-sc
 provisioner: rbd.csi.ceph.com
 parameters:
-   clusterID: <Cluster ID>
+   clusterID: <cluster id>
    pool: kube
    imageFeatures: layering
    csi.storage.k8s.io/provisioner-secret-name: csi-rbd-secret
