--- a/gitlab/service_ep.yaml
+++ b/gitlab/service_ep.yaml
@@ -5,23 +5,37 @@ metadata:
   name: gitlab-svc
 spec:
   ports:
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 8929
       targetPort: 8929
-
----
-apiVersion: discovery.k8s.io/v1
-kind: EndpointSlice
-metadata:
-  name: gitlab-ep 
-  labels:
-    kubernetes.io/service-name: gitlab-svc
-addressType: IPv4
-ports:
-  - name: ''
-    appProtocol: http
-    protocol: TCP
-    port: 8929
-endpoints:
-  - addresses:
-      - "192.168.2.210"
+  externalIPs:
+    - 192.168.2.210
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: gitlab-svc
+# spec:
+#   # type: ExternalName
+#   # externalName: gitlab.familym.ru
+#   ports:
+#     - protocol: TCP
+#       port: 8929
+#       targetPort: 8929
+# ---
+# apiVersion: discovery.k8s.io/v1
+# kind: EndpointSlice
+# metadata:
+#   name: gitlab-ep 
+#   labels:
+#     kubernetes.io/service-name: gitlab-svc
+# addressType: IPv4
+# ports:
+#   - name: ''
+#     appProtocol: http
+#     protocol: TCP
+#     port: 8929
+# endpoints:
+#   - addresses:
+#       - "192.168.2.210"
